# PROGNOZA

./: .gitignore  .progonzarc  README.md  TASK.md  config.yaml  pyproject.toml  requirements.txt
.cache/: weather_cache.sqlite
ai/: __init__.py  orchestrator.py  prompts.py
ai/policies/: __init__.py  drift.py  selection.py
ai/providers/: __init__.py  claude.py  gpt.py
ai/reports/: __init__.py  explain.py
ai_hibrid/: __init__.py
ai_hibrid/metrics/: __init__.py  (+1 more)
app/: __init__.py  __main__.py  janitza_client.py  openvpn_manager.py  ovpn_config.py  poll.py  settings.py  vpn.py  vpn_connection.py
cli/: __init__.py  app.py  common.py  i18n.py  menu.py
config/: ai.yaml  data_quality.yaml  settings.example.yaml  weather.yaml
core/: README.md
docs/: architecture.md  compliance_checklist.md  database_schema.md  vpn_usage.md
prognoza/: __init__.py
scripts/: GHID_RAPID_UTILIZARE.md  README.md  README_RAPORTARI_RO.md  fetch_weather_all.bat  fetch_weather_all.ps1  fetch_weather_all_simple.ps1  fetch_weather_daily.ps1  fetch_weather_nowcast.ps1  run_backup.py  run_scheduler.py  setup_task_scheduler.ps1
tests/: conftest.py  pytest.ini  test_ai.py  test_ai_hibrid.py  test_app.py  test_cli.py  test_cli_smoke.py  test_core.py  test_orchestrator_smoke.py  test_physics_baseline.py  test_pipeline_smoke.py  test_providers_smoke.py  test_quality.py  test_router_merge.py  test_scripts.py  test_ui.py  test_weather.py
ui/: __init__.py  data_access.py  schemas.py  server.py
weather/: README.md  __init__.py  cache.py  config_example.yaml  core.py  normalize.py  router.py
(+68 files in other folders)
