[project]
name = "prognoza-pv"
version = "0.1.0"
description = "Sistem de raportare si prognoza pentru parc fotovoltaic conform legislatiei romanesti"
authors = [
  { name = "PRE Automation", email = "ops@example.com" }
]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "pymodbus>=3.0",
  "tenacity>=8.2",
  "apscheduler>=3.10",
  "sqlalchemy>=2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "openpyxl>=3.1",
  "xlsxwriter>=3.1",
  "lxml>=4.9",
  "xmlschema>=2.3",
  "scikit-learn>=1.3",
  "typer[all]>=0.12",
  "prometheus-client>=0.18"
]

[project.optional-dependencies]
forecast = ["meteomatics-api", "openmeteo-precip"]

[tool.uvicorn]
app = "prognoza.interfaces.api_server:app"
host = "0.0.0.0"
port = 8080
reload = true

[tool.setuptools.packages.find]
where = ["."]
include = ["prognoza*"]
